# personal_blog

./: Makefile  README.md
backend/: .env.example  README.md  personal_blog.spec  pyproject.toml  requirements.txt  run.py
backend/app/: main.py  web.py
backend/app/api/: router.py
backend/app/api/endpoints/: admin.py  health.py  quote.py
backend/app/core/: runtime.py  settings.py  storage.py
backend/app/schemas/: admin.py  quote.py
backend/app/services/: admin_account_store.py  admin_auth_models.py  admin_auth_security.py  admin_auth_service.py  quote_service.py  resource_service.py
backend/data/meta/: admin_credentials.json
backend/tests/: support.py  test_admin_api.py  test_admin_auth_service.py  test_resource_service.py
deploy/nginx/: personal-blog.conf
deploy/systemd/: personal-blog-healthcheck.sh  personal-blog-watchdog.service  personal-blog-watchdog.timer  personal-blog.service
docs/: 一体化网站技术方案.md  一键部署平台文档.md  下一阶段开发规划.md  前后端目录结构技术文档.md  首页首屏实现说明.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: bj-manifest.json
frontend/scripts/: generate-bg-manifest.mjs
frontend/src/: main.tsx  styles.css
frontend/src/components/: ParticleTextEffect.tsx
frontend/src/hooks/: useRandomBackground.ts  useRandomQuote.ts
frontend/src/pages/: FeaturePendingPage.tsx  HomePage.tsx  MoviesPage.css  MoviesPage.tsx  NotFoundPage.tsx  SoftwareAccountAdminPage.tsx  SoftwareAdminPage.css  SoftwareAdminPage.tsx  SoftwarePage.css  SoftwarePage.tsx  SoftwareWorkspace.css
(+37 files in other folders)
